<?xml version="1.0" encoding="utf-8"?>

<!--
 **
 * @author Vinay Arora 
 * @Dated 12 Sept 2014 Version 1.0
 * @description data is file containing data related to the Application
 * 
 * 
 *
-->
<!--
 	FILE RELATED INFORMATION

To change a character 
     	suppose we wanted to change "Book Your Cab" to "Book My Cab" 
     		we can do by simply replacing Book Your Cab with Book My Cab
-->
<resources>

    <!-- Strings Related to the Application -->
    <string name="app_name"> Book Your Cab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="distance_sd">0 Km</string>
  <string name="driverActivity_update_profile">Please update your profile</string>
    <!-- Slide Menu Row item -->

    <string name="item_home">Home</string>
    <string name="item_one">Profile</string>
    <string name="item_two">Rides</string>
    <string name="item_three">Cab Money</string>
    <string name="item_four">Rate Card</string>
    <string name="item_five">Help</string>
    <string name="item_six">Sign Out</string>
    <string name="item_seven">Refer to Friend</string>

    <!-- Slide Menu Row desc -->
    <string name="item_dhome">Book Your Cab</string>
    <string name="item_done">View and edit profile</string>
    <string name="item_dtwo">Track your rides</string>
    <string name="item_dthree">Check your balance</string>
    <string name="item_dfour">Know the Charges</string>
    <string name="item_dfive">Give us a shout</string>
    <string name="item_dsix">Sign Out</string>
    <string name="item_dseven">Spread the love</string>

    <!-- Miscellaneous Strings -->

    <string name="menubutton">If</string>
    <string name="datetimepickerstring">Select Pickup Time</string>
    <string name="cab_details_progress_text">Getting Your Cab Details.......</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="header_name">Book Your Cab</string>
    <string name="quit">Confirm Exit ...</string>
    <string name="really_quit">Are you sure you want to exit ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">Ok</string>
    <string name="password">password</string>
    <string name="takepicture">Take profile picture</string>
    <string name="selectpicture">select profile picture</string>
    <string name="update">Update</string>
    <string name="male">Male</string>
    <string name="cabtype">Cab Type</string>
    <string name="apiversionerror">You Android Version doesnt Match Minimum Requirement</string>
    <string name="messagedialogtitle">Note</string>
    <string name="messagedialogmessage">Your will get a Confirmation Call shortly..Please Click on Confirm Button after Call to Book this Ride</string>
    <string name="customername">Passenger Name;:</string>
    <string name="customercontact">Contact Number :</string>
    <string name="please_wait">Please Wait......</string>
    <string name="refer_content">Use my RideAway promo code, xyzz, and get $ 10 ir $20 of your first RideAway ride,Reedeem it at RideAway.com/invite/xyzz</string>
    <string name="Refer_friend">Refer To a Friend</string>
    <string name="marker_text">You Are Here</string>
    <string name="set">Set</string>
    <string name="status">Status: </string>
    <string name="available">Available</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="pickup_location">Pick Up Location :</string>
    <string name="dropoff_location">Drop off Location :</string>
    <string name="pickup_time">Pick Up Time :</string>
    <string name="pickup_date">Pick Up Date :</string>
    <string name="username_hint">Username(Email)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="register_me">Register Me>></string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="distance">Distance:</string>
    <string name="permile">Per Mile:</string>
    <string name="driver_name">Driver Name :</string>
    <string name="contact">Contact No :</string>
    <string name="cab_num">Cab No :</string>
    <string name="my_location">My Location</string>
    <string name="name">Name</string>
    <string name="signout">Sign Out</string>
    <string name="cab_reach_time">Cab reach time :</string>
    <string name="project_id">266958144282</string>

    <!-- String for Refer -->
    <string name="spread">Spread the love</string>
    <string name="love">Love our Service? invite Friends</string>

    <!-- Strings for Dialog -->
    <string name="gpsdisabledtitle">No location access !!</string>
    <string name="gpsdisabledmessage">Please allow Book My Cab to access your location. Turn it ON from Location Services</string>
    <string name="gpsposbutton">Settings</string>
    <string name="gpsnegativebutton">No</string>
    <string name="blank"></string>

    <!-- Strings for Internet -->
    <string name="internetdisabledtitle">No internet</string>
    <string name="internetdisabledmessage">You do not seem to be connected to the internet. Turn ON</string>
    <string name="internetpositive">WIFI</string>
    <string name="internetnegative">Mobile data</string>
    <string name="refertitle">Invitation Sent</string>
    <string name="refermessage">you have successfully invited your friends.invite </string>
    <string name="refermessagecontinue"> more friends to recieve rewards</string>
    <string name="refersuccessmessage"> you have successfully invited your friends.you will get reward coupon on your registered email-id shortly.</string>
    <string name="get_d_status_dialog">Getting your current Status</string>
    <string name="sharegplus">Share on Google+</string>
    <string name="gps_error">Unable to Access Gps! please turn it on Manually </string>
    <string name="google_play_error">Google Play Services are Not Installed</string>
    <string name="map_expception">Exception Generated in intialisation of MAP</string>
    <string name="getting_location">Getting Your Location.....</string>
    <string name="maps_create_error">Sorry! unable to create maps...</string>
    <string name="drawing_route">Drawing your Route .......</string>
    <string name="map_load_error">Exception Generated in intialisation of MAP</string>
    <string name="your_location">Your Location</string>
 
    <string name="destination_hint">Search Destination</string>
    <!-- Activity Strings -->
    <string name="pending">Pending</string>
    <string name="booked">Booked</string>
    <string name="no_status">No Status Available !!!</string>
    <string name="driver_status_update_msg">Your Status has been Updated...</string>
    <string name="driver_status_update_progress_msg">Updating your status...</string>
    <string name="select_destination_error">Please Select Destination</string>
    <string name="passenger_ride_reject_msg">Cannot Confirm Booking!! Passenger has Rejected This Booking</string>
    <string name="driver_ride_reject_msg">Cannot Confirm Booking!! Driver has Rejected This Booking</string>
    <string name="ride_confirm_msg">Your Ride is Confirmed</string>
    <string name="ride_reject_msg">Your Ride is Rejected</string>
    <string name="loading_msg">Loading ...</string>
    <string name="dnd">DND</string>
    <string name="amount_zero_error">Amout Should be Greater than 0</string>
    <string name="paypal_invalid_docs_msg">An invalid Payment or PayPalConfiguration was submitted. Please see the docs.</string>
    <string name="paypal_payment_cancel">Payment has been canceled.</string>
    <string name="confirming_msg">Confirming Your Booking</string>
    <string name="rejecting_msg">Rejecting Your Booking</string>
    <string name="registration_sucess_msg">You are successfully Registered</string>
    <string name="user_inactive_error">Your account is Inactive !! please contact administrator</string>
    <string name="suggesttion_error">Unable to find Suggestion for the Keyword Specified</string>
    
    <string name="updating_status">Updating your status...</string>
    <string name="status_updated">"Your Status has been Updated To "</string>
   

</resources>