<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <com.coboltforge.slidemenu.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:weightSum="10" >

            <LinearLayout
                android:id="@+id/driverstatusllid"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/driverstatusimgid"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/available"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/driverstatustextid"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="@string/available"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_layout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="#02A2E5"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/passenger_details"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passenger_layout_id"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="12" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="10dp"
                        android:text="@string/customername"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="10dp"
                        android:text="@string/customercontact"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="10dp"
                        android:text="@string/pickup_location"
                        android:textColor="#000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="10dp"
                        android:text="@string/dropoff_location"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/pick_up_time_tex"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="10dp"
                        android:text="@string/pickup_time"
                        android:textColor="#000"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/pick_up_date_tex"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="10dp"
                        android:text="@string/pickup_date"
                        android:textColor="#000"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="12" >

                    <TextView
                        android:id="@+id/cust_name_dri"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/cust_num_dri"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="9999999"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/pick_loc_dri"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/drop_loc_dri"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/pick_time_dri"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:textColor="#000"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/pick_date_dri"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:textColor="#000"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

              <LinearLayout
                android:layout_width="fill_parent"
                android:id="@+id/updateprofile"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:visibility="invisible"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/update_profile"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/driverActivity_update_profile"
                    android:textColor="@color/update_profile_first"
                    android:textSize="18sp"
                     />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/driver_buttons_linear_id"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:weightSum="2" >

                <ImageButton
                    android:id="@+id/confirm_img_dri"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/confirm" />

                <ImageButton
                    android:id="@+id/reject_img_dri"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/reject" />
            </LinearLayout>
        </LinearLayout>
    </com.coboltforge.slidemenu.SlideMenu>

</RelativeLayout>