<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fff"
    
    
    >
     <com.coboltforge.slidemenu.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:weightSum="10"
    android:background="#e8e8e8"
    
    >
    
        <TextView 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/spread"
        android:textSize="18sp"
        android:textColor="#AAA"
        android:textStyle="bold"
		android:gravity="bottom"
		android:layout_marginLeft="10dp"        
        
        />
        <TextView 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/love"
        android:textSize="14sp"
        android:textColor="#AAA"
        android:textStyle="normal"
		android:gravity="top"
		android:layout_marginTop="4dp"
		android:layout_marginLeft="10dp"        
        
        />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dp"
			android:layout_weight="1"
			android:layout_margin="10dp"
			android:background="#fff"
			android:orientation="horizontal"   
			android:weightSum="10"     
			android:id="@+id/share_ggooglePlus"    
            >
            <ImageButton 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"
                android:src="@drawable/googleplus"
                android:scaleType="centerInside"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                
                />
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="8.5"
                android:layout_height="fill_parent"
                android:text="@string/sharegplus"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                
                />
            
            
            
        </LinearLayout>
    
    
       

</LinearLayout>
</com.coboltforge.slidemenu.SlideMenu>
</RelativeLayout>